--- a/TrafficInspection/src/main/resources/templates/components/all_licenses.html
+++ b/TrafficInspection/src/main/resources/templates/components/all_licenses.html
@@ -39,6 +39,15 @@
                         Дата истекания
                     </p>
                 </div>
+                <div>
+                    <form th:action="@{|/inspect/licenses/edit/${license.licenseId}|}" method="get"
+                          style="margin-bottom: 0.5em">
+                        <button type="submit" class="default_button" style="background-color: gray">Изменить удостоверение</button>
+                    </form>
+                    <form th:action="@{|/inspect/licenses/${license.licenseId}|}" method="post">
+                        <button type="submit" class="default_button" style="background-color: maroon;">Удалить удостоверение</button>
+                    </form>
+                </div>
             </div>
         </th:block>
     </div>
