--- a/TrafficInspection/src/main/resources/templates/pages/employee/edit_violation_form.html
+++ b/TrafficInspection/src/main/resources/templates/pages/employee/edit_violation_form.html
@@ -10,33 +10,50 @@
 <header th:replace="~{components/header :: header}"></header>
 <main class="container main" style="position: relative">
     <div class="container nav_content">
+        <div class="container back_container">
+            <a class="img_container" th:href="@{/inspect/violations}">
+                <img src="/static/img/back_button.png" th:src='@{/img/back_button.png}' alt="Back"/>
+            </a>
+        </div>
         <div class='label_container'>
             <span class="h1">Изменить нарушение</span>
         </div>
         <form class="container form_container" style="width: 50%"
               th:object="${violationDto}"
               th:action="@{|/inspect/violations/edit/${violationDto.violationId}|}" th:method="POST">
+            <div class="container info_container" th:if="${#fields.hasGlobalErrors()}">
+                <div class="container message_container error_message" th:each="error: ${#fields.globalErrors}">
+                    <span th:text="${error}">Общая ошибка</span>
+                </div>
+            </div>
             <div class="container input_container">
                 <label>Код нарушения</label>
                 <div class="input_form">
                     <input type="number" th:field="*{violationId}"
-                           th:value="${violationDto.violationId}" disabled>
+                           th:value="${violationDto.violationId}" readonly>
                 </div>
                 <p th:each="error: ${#fields.errors('violationId')}"
                    th:text="${error}">Validation error</p>
             </div>
             <div class="container input_container">
                 <label>Код удостоверения</label>
-                <div class="input_form">
-                    <input type="text" th:field="*{registrationCode}" placeholder="A 000 AA RUS 061"
-                    th:value="${violationDto.registrationCode}">
-                </div>
+                <select th:field="*{registrationCode}" class="input_form">
+                    <option th:each="vehicle : ${vehicleList}"
+                            th:value="${vehicle.registrationCode}"
+                            th:text="${vehicle.registrationCode}"
+                            th:selected="${violationDto.registrationCode}"></option>
+                </select>
                 <p th:each="error: ${#fields.errors('registrationCode')}"
                    th:text="${error}">Validation error</p>
             </div>
             <div class="container input_container">
-                <label>Код штрафа</label>
-                <input type="number" th:field="*{fineId}" placeholder="0" th:value="${violationDto.fineId}"/>
+                <label>Вид штрафа</label>
+                <select th:field="*{fineId}" class="input_form">
+                    <option th:each="i : ${#numbers.sequence(1, fineList.size())}"
+                            th:value="${i}"
+                            th:text="${fineList.get(i - 1).description}"
+                            th:selected="${i==violationDto.fineId}"></option>
+                </select>
                 <p th:each="error: ${#fields.errors('fineId')}"
                    th:text="${error}">Validation error</p>
             </div>
