--- a/TrafficInspection/src/main/resources/templates/components/all_licenses.html
+++ b/TrafficInspection/src/main/resources/templates/components/all_licenses.html
@@ -39,7 +39,7 @@
                         Дата истекания
                     </p>
                 </div>
-                <div>
+                <div class="container" style="flex-direction: row; gap: 0.5em">
                     <form th:action="@{|/inspect/licenses/edit/${license.licenseId}|}" method="get"
                           style="margin-bottom: 0.5em">
                         <button type="submit" class="default_button" style="background-color: gray">Изменить удостоверение</button>
