--- a/TrafficInspection/src/main/resources/templates/components/header.html
+++ b/TrafficInspection/src/main/resources/templates/components/header.html
@@ -47,6 +47,8 @@
       <div class="dropdown-content">
         <a th:href="@{/inspect/licenses}">Все удостоверения</a>
         <a th:href="@{/inspect/violations}">Все нарушения</a>
+        <a th:href="@{/inspect/vehicles}">Все ТС</a>
+        <a th:href="@{/inspect/certificates}">Все Свитедельства</a>
       </div>
     </div>
   </div>
