--- a/TrafficInspection/src/main/resources/templates/pages/employee/new_violation_form.html
+++ b/TrafficInspection/src/main/resources/templates/pages/employee/new_violation_form.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="container input_container">
-                <label>Код удостоверения</label>
+                <label>Регистрационный номер</label>
                 <div class="input_form">
                     <input type="text" th:field="*{registrationCode}" placeholder="A 000 AA RUS 061">
                 </div>
