--- a/TrafficInspection/src/main/resources/static/css/layout.css
+++ b/TrafficInspection/src/main/resources/static/css/layout.css
@@ -48,8 +48,8 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-/* Links inside the dropdown */
-.dropdown-content a {
+/* Content inside the dropdown */
+.dropdown-content * {
     color: black;
     font-size: 0.6em;
     padding: 12px 16px;
