Добавлен недостающий пункт

--- a/TrafficInspection/src/main/resources/templates/components/header.html
+++ b/TrafficInspection/src/main/resources/templates/components/header.html
@@ -37,6 +37,7 @@
         <a th:href="@{/me/license}">Удостоверение</a>
         <a th:href="@{/me/vehicles}">Транспорт</a>
         <a th:href="@{/me/violations}">Нарушения</a>
+        <a th:href="@{/me/certificates}">Свидетельства</a>
         <a style="color: maroon" th:href="@{/logout}">Выход</a>
       </div>
     </div>
